[FN-2] Update build profile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,12 @@ version: "3.7"
 services:
 
   friendsternet:
-    image: friendsternet:1.0.0-SNAPSHOT
+    build: .
     ports:
       - "8080:8080"
     networks:
       - backend
-#    depends_on:
-#      - db
+    command: "mvn spring-boot:run"
     deploy:
       replicas: 1
       update_config:
@@ -16,17 +15,6 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
-
-#  db:
-#    image: postgres:9.4
-#    volumes:
-#      - db-data:/var/lib/postgresql/data
-#    networks:
-#      - backend
-#    deploy:
-#      placement:
-#        constraints:
-#          - "node.role==manager"
 
 networks:
   frontend:
